# USB-asynchronous-soundcard

./: Cargo.toml
examples/rtic-stm32f4xx/: Cargo.toml
examples/rtic-stm32f4xx/.cargo/: config.toml
examples/rtic-stm32f4xx/src/: codec.rs  lib.rs
examples/rtic-stm32f4xx/src/codecs/: cs4272.rs  mod.rs
examples/rtic-stm32h7xx/: Cargo.toml
examples/rtic-stm32h7xx/.cargo/: config.toml
examples/rtic-stm32h7xx/src/: lib.rs
src/: lib.rs
